# ATLAS

./: .gitignore  Untitled.ipynb  __master__.py  cli.sh  pyproject.toml
helper_functions/: processing_chain.py
processor/: __preprocessor__.py
processor/lidar_processing/: short_prepro.py  signal.py
scc_converter/readers/: parse_args.py  read_config.py  read_files.py
scc_converter/tools/: make.py  modify.py  process.py
templates/: config_file_alh.ini  settings_file_day.ini
tests/data/lidar_data/ascii/: 202305071892348_ALHAMBRA_tlc_sectors_0355nppr_ATLAS_0.0.2.txt  202305071892348_ALHAMBRA_tlc_sectors_0532ftax_ATLAS_0.0.2.txt  202305101890201_ALHAMBRA_ray_0355nppr_ATLAS_0.0.2.txt  202305101890201_ALHAMBRA_ray_0532ftax_ATLAS_0.0.2.txt  202305101892100_ALHAMBRA_ray_0355nppr_ATLAS_0.0.2.txt  202305101892100_ALHAMBRA_ray_0532ftax_ATLAS_0.0.2.txt
tests/data/lidar_data/drk/: RM2351017.104109  RM2351017.114249  RM2351017.124389  RM2351017.134523  RM2351017.144658  RM2351017.154789  RM2351017.164920  RM2351017.175049  RM2351017.185182  RM2351017.195329  RM2351020.375351  RM2351020.385480
tests/data/lidar_data/nrm/: RM2351002.015659  RM2351002.025789  RM2351002.035919  RM2351002.050050  RM2351002.060180  RM2351002.070309  RM2351002.080440  RM2351002.090571  RM2351002.100704  RM2351002.110840  (+107 more)
tests/data/radiosondes/: 20210705_1200_ecmwf.txt  20230510_0200_ecmwf.txt  20230510_1200_ecmwf.txt
visualizer/: __quicklook__.py  __telecover__.py
visualizer/plotting/: make_title.py
visualizer/tools/: normalize.py  smoothing.py
visualizer/writters/: export_ascii.py
(+56 files in other folders)
