[tool.poetry]
name = "atlas"
version = "0.1.0"
description = ""
authors = ["gfatugr <gfat@ugr.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^1.5.2"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
xarray = "^2022.12.0"
netcdf4 = "^1.6.2"
h5netcdf = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
